' Copyright (C) 2019 - present Juergen Zimmermann, Hochschule Karlsruhe
'
' This program is free software: you can redistribute it and/or modify
' it under the terms of the GNU General Public License as published by
' the Free Software Foundation, either version 3 of the License, or
' (at your option) any later version.
'
' This program is distributed in the hope that it will be useful,
' but WITHOUT ANY WARRANTY; without even the implied warranty of
' MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
' GNU General Public License for more details.
'
' You should have received a copy of the GNU General Public License
' along with this program.  If not, see <https://www.gnu.org/licenses/>.

' Preview durch <Alt>d

@startuml ER Diagramm

' hide the spot
hide circle

' evtl. Prbleme mit Kraehenfuessen vermeiden
skinparam linetype ortho

entity "APP_PROFILE" {
  * id: uuid <<PK>>
  --
  * display_name: text
  * avatar_url: text
  * status_message: text
  * timezone: text
  * current_streak: integer
  * onboarding_completed: boolean
  * erzeugt: timestamp
  * aktualisiert: timestamp
}

entity "TRACKING_CONFIG" {
  * id: integer <<PK>>
  --
  * daily_limit_minutes: integer
  * is_public: boolean
  * notifications_enabled: boolean
  * **profile_id**: uuid <<FK>>
  * erzeugt: timestamp
  * aktualisiert: timestamp
}

entity "PROFILE_AVATAR" {
  * id: integer <<PK>>
  --
  * file_data: bytes
  * filename: text
  * mimetype: text
  * file_size_bytes: integer
  * **profile_id**: uuid <<FK>>
  * erzeugt: timestamp
  * aktualisiert: timestamp
}

entity "SCREENTIME_LOG" {
  * id: integer <<PK>>
  --
  * log_date: date
  * total_minutes: integer
  * top_app: text
  * **profile_id**: uuid <<FK>>
  * erzeugt: timestamp
  * aktualisiert: timestamp
}

' Beziehungen
APP_PROFILE ||..o| TRACKING_CONFIG
APP_PROFILE ||..o| PROFILE_AVATAR
APP_PROFILE ||..o{ SCREENTIME_LOG

' Hinweis: Unique-Constraint auf (profile_id, log_date) fuer SCREENTIME_LOG

footer (c) reclaim

@enduml
